added dasboard and css

--- a/views/blogSetup.ejs
+++ b/views/blogSetup.ejs
@@ -44,9 +44,9 @@
 
     <% if(typeof message !=='undefined' ){ %>
         <p style="color: red;">
-            <% message %>
+            <%= message %>
         </p>
         <% } %>
 
 
-<%- include("./layouts/footer.ejs") %>
+            <%- include("./layouts/footer.ejs") %>
