--- a/views/layouts/admin-header.ejs
+++ b/views/layouts/admin-header.ejs
@@ -28,6 +28,9 @@
                     <a href="/dashboard"><span class="fa fa-user mr-3"></span> Dashboard</a>
                 </li>
                 <li>
+                    <a href="/create-post"><span class="fa fa-sticky-note-o mr-3"></span> Create Post</a>
+                </li>
+                <li>
                     <a href="/logout"><span class="fa fa-sign-out mr-3"></span> Logout</a>
                 </li>
             </ul>
