--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include("./layouts/header.ejs") %>
 
 
-    <div class="container">
+    <div class="container mb-5 mt-5">
         <h1>Login</h1>
 
         <% if(typeof message !=='undefined' ){ %>
@@ -28,6 +28,7 @@
                         </div>
                     </div>
                 </form>
+            <a href="/forget-password">Forget Password</a>
     </div>
 
 
